// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`[InteractiveBoard] Renders card-project correctly and matches snapshot 1`] = `
<DocumentFragment>
  <div>
    InteractiveBoard Mock
  </div>
</DocumentFragment>
`;

exports[`[PortfolioPage] should render desktop view correctly 1`] = `
<DocumentFragment>
  <main
    class="portfolio-content"
    style="cursor: grab;"
  >
    <div>
      InteractiveBoard Mock
    </div>
  </main>
</DocumentFragment>
`;

exports[`[PortfolioPage] should render mobile view correctly 1`] = `
<DocumentFragment>
  <main
    class="portfolio-content"
    style="cursor: grab;"
  >
    <div>
      InteractiveBoard Mock
    </div>
  </main>
</DocumentFragment>
`;
